@@ -21,5 +21,7 @@ separate files.
 parameters.
 <LI><A HREF="autodoc.html">Autodoc functions</A> for accessing and manipulating
 an autodoc-like file.
+<LI> <A HREF="mrcslice.html">Slice functions</A> for doing the most basic
+operations on Islice structures (most slice functions are in libiimod).
 </UL>
 </body>
